--- a/frontend_/package.json
+++ b/frontend_/package.json
@@ -21,6 +21,7 @@
     "@react-pdf-viewer/default-layout": "^3.12.0",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
+    "lodash": "^4.17.21",
     "lucide-react": "^0.453.0",
     "next": "^14.2.16",
     "react": "^18",
